@@ -77,7 +77,7 @@ split: ../mtexinfo/Cross-References.html#Cross-References
 
 <span id="Testing-manual-name"></span><h3 class="subheading">Testing manual name</h3>
 
-<p><tt>../manual/doc.texi</tt> <a href="../doc/node.html#node">(../manual/doc.texi)node</a><br>
+<p><tt>../manual/doc.texi</tt> <a href="../doc/node.html#node">(../manual/doc)node</a><br>
 </p><div class="example">
 <pre class="example">mono : doc.html#node
 split: ../doc/node.html#node
